--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^0.20.0",
     "formik": "^2.2.0",
     "framer-motion": "^2.9.1",
+    "jwt-decode": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2"
