--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4",
     "axios": "^0.20.0",
     "formik": "^2.2.0",
     "framer-motion": "^2.9.1",
