--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
+    "animate.css": "^4.1.1",
     "axios": "^0.20.0",
     "formik": "^2.2.0",
     "jwt-decode": "^3.0.0",
